--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,15 @@
 buildscript {
+  ext {
+    ext.kotlin_version = '1.3.0-rc-57'
+  }
   repositories {
     mavenCentral()
     maven { url "https://kotlin.bintray.com/kotlinx" }
+    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
   }
   dependencies {
-    classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.10'
-    classpath "org.jetbrains.kotlinx:kotlinx-gradle-serialization-plugin:0.4"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
   }
 }
 
@@ -20,15 +24,34 @@ sourceCompatibility = JavaVersion.VERSION_1_6
 repositories {
   mavenCentral()
   maven { url "https://kotlin.bintray.com/kotlinx" }
+  maven {
+    url 'http://dl.bintray.com/kotlin/kotlin-eap'
+  }
+}
+
+ext {
+  ext.kotlin_version = '1.3.0-rc-57'
 }
 
 dependencies {
   api 'com.squareup.retrofit2:retrofit:2.3.0'
-  implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.2.10'
-  api 'org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.4'
+  implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  api 'org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.8.0-rc13'
 
   testImplementation 'junit:junit:4.12'
   testImplementation 'com.squareup.okhttp3:mockwebserver:3.9.1'
   testImplementation 'com.google.truth:truth:0.37'
   testImplementation 'org.jetbrains.kotlin:kotlin-reflect:1.2.10'
+  compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+}
+
+compileKotlin {
+  kotlinOptions {
+    jvmTarget = "1.8"
+  }
+}
+compileTestKotlin {
+  kotlinOptions {
+    jvmTarget = "1.8"
+  }
 }
